test_regress/t/t_fourstate_operator_unsup.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain.
// SPDX-FileCopyrightText: 2026 Antmicro
// SPDX-License-Identifier: CC0-1.0

module t;
  initial begin
    static integer x;
    static integer y;
    y = 2 ** x;
  end
endmodule
